[project]
name = "starcraft"
version = "0.0.1"
readme = "README.rst"
dependencies = [

]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"

[project.scripts]
starcraft-hello = "starcraft:hello"

[project.optional-dependencies]
dev = [
]
types = [
]

[build-system]
requires = [
    "setuptools==45.2.0",  # This is the version provided in apt with focal
]
build-backend = "setuptools.build_meta"
