[project]
name = "starcraft"
version = "0.0.1"
readme = "README.rst"
dependencies = [

]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"

[project.scripts]
starcraft-hello = "starcraft:hello"

[project.optional-dependencies]
dev = [
    "pytest==7.0.0",
    "pytest-cov==4.0.0",
    "pytest-mock==3.10.0",
]
types = [
]

[build-system]
requires = [
    "setuptools==45.2.0",  # This is the version provided in apt with focal
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = "tests"
xfail_strict = true
addopts = [
    "--cov",
]

[tool.coverage.run]
branch = true
omit = ["tests/**"]

[tool.coverage.report]
skip_empty = true
fail_under = 80

